fix .btn-add with scrollbars

--- a/client/assets/styles/scss/components/buttons/buttons.scss
+++ b/client/assets/styles/scss/components/buttons/buttons.scss
@@ -538,6 +538,7 @@
   border: 1px solid $gray-lighter;
   color: $gray-light;
   line-height: initial;
+  overflow: hidden;
   padding: 3px;
   transition: none;
 
